Fix word breaking on mobile

--- a/less/main.less
+++ b/less/main.less
@@ -622,6 +622,7 @@ footer {
   font-size: 16px;
   letter-spacing: 0.2px;
   line-height: 24px;
+  word-break: break-word;
 
   h2 {
     text-align: center;
